ciのイメージにもlibvips-devを追加
Signed-off-by: drumato <drumato@pepabo.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt update
-        sudo apt install -y webp
+        sudo apt install -y webp libvips-dev
     - name: Setup Go
       uses: actions/setup-go@v3
       with:
