--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,10 @@ jobs:
         include:
         - os: ubuntu-latest
           platform: linux/amd64
+          suffix: ""
         - os: ubuntu-24.04-arm
           platform: linux/arm64
+          suffix: "-arm"
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -43,4 +45,4 @@ jobs:
           context: .
           platforms: ${{ matrix.platform }}
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ghcr.io/pepabo/oyaki:${{ github.ref_name }}${{ matrix.suffix }}
